--- a/themes/RogersHood-theme/package.json
+++ b/themes/RogersHood-theme/package.json
@@ -19,6 +19,7 @@
     "10up-toolkit": "^6.2.0"
   },
   "dependencies": {
+    "basiclightbox": "^5.0.4",
     "modern-normalize": "^2.0.0"
   },
   "10up-toolkit": {
