--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,9 @@ uploads
 upgrade
 cache
 plugins
-themes/twentytwentyfour
-themes/twentytwentythree
-themes/twentytwentytwo
-.gitignore
+themes/RogersHood-theme/node_modules/.cache/stylelint-webpack-plugin
+themes/RogersHood-theme/vendor
+
 
 # Project Files
 dist
