--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ uploads
 upgrade
 cache
 plugins
-themes/RogersHood-theme/node_modules/.cache/stylelint-webpack-plugin
+themes/RogersHood-theme/node_modules/
 themes/RogersHood-theme/vendor
 
 # Project Files
