finishing the draft of the founders page

--- a/themes/RogersHood-theme/package.json
+++ b/themes/RogersHood-theme/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "basiclightbox": "^5.0.4",
-    "modern-normalize": "^2.0.0"
+    "modern-normalize": "^2.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "10up-toolkit": {
     "useBlockAssets": true,
