--- a/themes/RogersHood-theme/package.json
+++ b/themes/RogersHood-theme/package.json
@@ -26,6 +26,7 @@
   "10up-toolkit": {
     "useBlockAssets": true,
     "entry": {
+      "404-style": "./assets/css/frontend/templates/404.css",
       "admin": "./assets/js/admin/admin.js",
       "editor-style-overrides": "./assets/js/admin/editor-style-overrides.js",
       "frontend": "./assets/js/frontend/frontend.js",
