--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ phpunit.xml
 uploads
 upgrade
 cache
-plugins
 !plugins/rogershood-quiz
 !plugins/rogershood-reviews
+!plugins/rogershood-points
+plugins
 themes/RogersHood-theme/node_modules/
 themes/RogersHood-theme/vendor
 log
